--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "moralis-v1": "^1.13.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-moralis": "^1.3.5",
+    "react-native-countdown-circle-timer": "^3.2.1",
+    "react-native-web": "^0.19.4",
+    "react-scripts": "3.0.1",
     "web3uikit": "^0.0.133"
   },
   "devDependencies": {
